--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 game
 server
 test
+.DS_Store
 *.o
 *.a
 *~
 *.kate-swp
+*.sublime-workspace
+*.sublime-project
 .sconsign.dblite
 .scons-option-cache
 .directory
@@ -12,3 +15,22 @@ test
 *.blend2
 *.blend3
 *.db
+*.odt#
+.*.swp
+dirs.txt
+core
+core.*
+*.exe
+*.d
+compiled-*
+tiles-compiled-*
+
+compiled/
+
+MacOS/include
+MacOS/lib
+xcuserdata
+project.xcworkspace
+
+Device-Debug
+Device-Release
