--- a/package.json
+++ b/package.json
@@ -23,6 +23,12 @@
   },
   "homepage": "https://github.com/DDR0/ddr0.github.com#readme",
   "dependencies": {
+    "express": "^4.17.1",
+    "math-expression-evaluator": "^1.2.22",
+    "roll-parser": "^2.3.2",
+    "sse-pubsub": "^1.3.0"
+  },
+  "devDependencies": {
     "less": "^3.11.1"
   }
 }
