--- a/site-config/dice.service
+++ b/site-config/dice.service
@@ -1,13 +1,13 @@
 [Unit]
 Description=DnD dice roller server
-Documentation=https://ddr0.ca/%F0%9F%8E%B2
+Documentation=https://ddr0.ca/%E2%9A%80
 After=network.target
 
 [Service]
 Type=simple
 User=www-data
 WorkingDirectory=/opt/ddr0.ca
-ExecStart=/usr/bin/node /opt/ddr0.ca/🎲/dice.node.js 
+ExecStart=/usr/bin/node /opt/ddr0.ca/⚀/dice.node.js 
 Restart=on-failure
 
 [Install]
