--- a/package.json
+++ b/package.json
@@ -31,6 +31,27 @@
     "sse-pubsub": "^1.3.0"
   },
   "devDependencies": {
-    "less": "^3.11.1"
+    "less": "^3.11.1",
+    "prismjs": "^1.23.0"
+  },
+  "x-eslintConfig": {
+    "env": {
+      "browser": true,
+      "node": true,
+      "commonjs": true,
+      "es2021": true
+    },
+    "extends": [
+      "eslint:recommended",
+      "plugin:@typescript-eslint/recommended"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+      "ecmaVersion": 12
+    },
+    "plugins": [
+      "@typescript-eslint"
+    ],
+    "rules": {}
   }
 }
