--- a/package.json
+++ b/package.json
@@ -23,16 +23,14 @@
   },
   "homepage": "https://github.com/DDR0/ddr0.github.com#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "math-expression-evaluator": "^1.2.22",
-    "roll-parser": "^2.3.2",
-    "rpg-dice-roller": "~3.0.1",
+    "express": "^4.17.2",
+    "@dice-roller/rpg-dice-roller": "^5.0.0",
     "socket.io": "^2.4.0",
-    "sse-pubsub": "^1.3.0"
+    "sse-pubsub": "^1.4.1"
   },
   "devDependencies": {
-    "less": "^3.11.1",
-    "prismjs": "^1.23.0"
+    "less": "^3.13.1",
+    "prismjs": "^1.26.0"
   },
   "x-eslintConfig": {
     "env": {
